:construction: Add Get Restaurants Stats Use Case

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/*.kotlin_module'
     }
 
 }
